--- a/WagCodeChallengeObj-C/Storyboards/Base.lproj/Main.storyboard
+++ b/WagCodeChallengeObj-C/Storyboards/Base.lproj/Main.storyboard
@@ -5,7 +5,7 @@
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14113"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -119,6 +119,13 @@
                                         <constraint firstAttribute="bottom" secondItem="i5S-BF-XMb" secondAttribute="bottom" constant="15" id="rwg-bN-R2P"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="bronzeBadgesLabel" destination="4wd-Dc-PEG" id="Izo-QB-nu6"/>
+                                    <outlet property="goldBadgesLabel" destination="eq3-1U-2TD" id="iWc-Mc-Ua2"/>
+                                    <outlet property="gravatarImageView" destination="gE4-Yl-YeT" id="KxG-q7-4Rc"/>
+                                    <outlet property="silverBadgesLabel" destination="P6U-eh-gph" id="DYP-IS-S30"/>
+                                    <outlet property="usernameLabel" destination="zZl-Md-CaJ" id="X4C-7y-grk"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
